--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "builds": [
     { "src": "backend/server.js", "use": "@vercel/node" },
-    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "frontend/build" } }
+    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "frontend/dist" } }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/backend/server.js" },
-    { "src": "/(.*)", "dest": "/frontend/build/$1" }
+    { "src": "/(.*)", "dest": "/frontend/dist/$1" }
   ]
 }
